--- a/Tyuiu.MiliukovLO.Sprint3.Task3.V25.Test/Tyuiu.MiliukovLO.Sprint3.Task3.V25.Test.csproj
+++ b/Tyuiu.MiliukovLO.Sprint3.Task3.V25.Test/Tyuiu.MiliukovLO.Sprint3.Task3.V25.Test.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.MilyukovLO.Sprint3.Task3.V25.Lib\Tyuiu.MilyukovLO.Sprint3.Task3.V25.Lib.csproj" />
+    <ProjectReference Include="..\Tyuiu.MiliukovLO.Sprint3.Task3.V25.Lib\Tyuiu.MiliukovLO.Sprint3.Task3.V25.Lib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
